--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to the wave world</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="stars"></div>
   <div class="centered-text">
-    <h1>Welcome</h1>
-    <h1>to</h1>
-    <h1>the</h1>
-    <h1>wave</h1>
-    <h1>world</h1>
+    <h1 id="welcome-text"></h1>
   </div>
   <script src="script.js"></script>
 </body>
+
 </html>
