--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to the Wave world</title>
   <link rel="stylesheet" href="styles.css">
+  <title>Wave</title>
 </head>
 <body>
   <div class="stars"></div>
