--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
   <div class="stars"></div>
   <div class="centered-text">
-    <h1 id="welcome-text"></h1>
-    <span class="cursor" id="cursor">|</span>
+    <h1 class="welcome-text" id="welcome-text"></h1>
   </div>
   <script src="script.js"></script>
 </body>
